--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
         <div class="product_slider"></div>
 
+        <div class="page_no"></div>
+
         <div class="slide_right slide_btn">
           <div class="slide_right_1"></div>
         </div>
